--- a/content/lecture8.tex
+++ b/content/lecture8.tex
@@ -1,3 +1,80 @@
 \section{Lecture 8: A geological perspective on carbon sources and sinks}
 
+\begin{itemize}
+	\item IPCC: Intergovernmental Panel on Climate Change
+	\item reservoir: a place where the carbon is stored
+	\item for example, vegetation stores 450-650 Pg of carbon
+	\item IPCC is using the word "stocks"
+	\item 2009:
+	\begin{itemize}
+		\item 7.8 Pg -- amount of fossil fuels emitted to atmosphere
+		per year
+		\item 1.1 Pg -- from agriculture land use
+	\end{itemize}
+	\item 2019:
+	\begin{itemize}
+		\item 279 PgCyr$^{-1}$
+	\end{itemize}
+	\item we use C, not CO$_2$ so we account also for methane etc.
+\end{itemize}
 
+\subsection{Petagram}
+
+1 petagram is $10^9$ tons.
+
+\subsection{Carbon in the atmopshere (pre-industrial}
+
+\begin{itemize}
+	\item atmosphere 591 pgC
+	\item slow cycle:
+	\begin{itemize}
+		\item volcanoes exchange 0.1PgC/yr with atmosphere
+		\item mountains weather 0.1PgC/yr from atmosphere
+	\end{itemize}
+	\item fast cycle:
+	\begin{itemize}
+		\item ocean to atmosphere: 0.6 PgC/yr
+		\item shallow waters to atmosphere: 1.5 PgC/yr
+		\item soil from atmosphere: 2.1 PgC/yr
+	\end{itemize}
+	\item every 3rd molecule of carbon in the atmosphere was put there by
+	humans
+\end{itemize}
+
+\subsection{Carbon reservoirs (stocks)}
+
+\begin{itemize}
+	\item atmosphere 591 PgC
+	\item oceans 38700 PgC
+	\item vegetation and soils 3350 PgC
+	\item fossil fuels 928 PgC
+\end{itemize}
+
+\subsection{Natural climate solutions}
+\begin{itemize}
+	\item forest-related solutions (total capacity 4.4 PgC/yr):
+	\begin{itemize}
+		\item reforestation
+		\item avoided forest fires
+	\end{itemize}
+	\item agriculture and grasslands (total capacity 1.3 PgC/yr):
+	\begin{itemize}
+		\item conservation agriculture (cover crops, no till, crop
+		rotation)
+		\item tree planting (instead of fences): capacity 0.3 PgC/yr
+		\item biochar
+	\end{itemize}
+	\item wetlands (total capacity 0.7 PgC/yr):
+	\begin{itemize}
+		\item preservation of wetlands
+	\end{itemize}
+\end{itemize}
+
+\subsection{Carbon Dioxide Removal (CDR)}
+\begin{itemize}
+	\item All analysed pathways limiting warming to $1.5 \degree$ with
+	no or limited overshoot use CDR to some extent to neutralize emissions
+	from sources for which no mitigation measures have been identified and,
+	in most cases, also to achieve net negative emissions to return
+	global warming to $1.5 \degree$ following a peak.
+\end{itemize}
