--- a/main.tex
+++ b/main.tex
@@ -31,5 +31,6 @@
 \input{content/lecture7}
 \input{content/reading_assignment8}
 \input{content/lecture8}
+\input{content/lecture9}
 
 \end{document}
